Fixed contrast issues with navcurrent in the mobile menu

--- a/theme/sass/parts/_siteMenu.scss
+++ b/theme/sass/parts/_siteMenu.scss
@@ -20,7 +20,10 @@
 							text-decoration: underline;
 						}
 						&.wb-navcurr {
-							background: #0b3048
+							&:link {
+								background: #0b3048;
+								color: #fff;
+							}
 						}
 					}
 				}
